# Hyprpaper-GUI

./: Cargo.toml  README.md
src/: main.rs
src/.github/workflows/: release.yml
