[package]
name = "hyprpaper-gui"
version = "0.1.0"
edition = "2024"
authors = ["Kokuse"]
description = "GUI wallpaper selector for Hyprpaper"
license = "Apache-2.0"

[dependencies]
eframe = "0.27"
egui = "0.27"
image = "0.24"
notify = "6.1"
rfd = "0.10"
md5 = "0.7"
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.5.0"
